# origin

./: .gitignore  README.md  system_prompt.md
backend/: README.md  main.py  requirements.txt
docs/: opportunity_gap_matrix.html
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: AgentGraph.tsx  AgentNetwork3D.tsx  DataSourcesPanel.tsx  DebatePanel.tsx  LogPanel.tsx  PredictionDashboard.tsx  StockChart.tsx  Verdict3D.tsx
infrastructure/: docker-compose.yml
mcp/: .env.example  .gitignore  README.md  db.py  pyproject.toml  server.py
video/: package-lock.json  package.json
video/src/: AnalysisVideo.tsx  Root.tsx  data.ts
video/src/scenes/: AgentsScene.tsx  DashboardScene.tsx  DebateScene.tsx  IntroScene.tsx  VerdictScene.tsx
