[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fundamental-analysis-mcp"
version = "0.1.0"
description = "MCP server for AI-powered fundamental stock analysis using real-world data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.4.0",
    "yfinance>=0.2.50",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
fundamental-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
